<resources>
    <string name="app_name">Multiple_Activity_Registration_Form</string>
    <string name="welcome">Welcome!!</string>
    <string name="WelcomeIMG">WelcomeIMG</string>
    <string name="start">Start</string>
    <string name="identification_info">Identification Info</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="other">Other</string>
    <string name="next">Next</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="role">Role:</string>
    <string name="demographic_info">Demographic Info</string>
    <string name="n_a">N/A</string>
    <string name="education">Education:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="living_status">Living Status:</string>
    <string name="income">Income:</string>
    <string name="select">Select</string>
    <string name="select_education_level">Select Education Level</string>
    <string name="educationQuestion">What is the highest degree or level of education you have completed?</string>
    <string name="below_high_school">Below High School</string>
    <string name="bachelor_s_degree">Bachelor\'s Degree</string>
    <string name="high_school">High School</string>
    <string name="master_s_degree">Master\'s Degree</string>
    <string name="ph_d_or_higher">Ph.D. or Higher</string>
    <string name="prefer_not_to_say">Prefer Not to Say</string>
    <string name="trade_school">Trade School</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="select_marital_status">Select Marital Status</string>
    <string name="what_is_your_marital_status">What is your marital status?</string>
    <string name="not_married">Not Married</string>
    <string name="married">Married</string>
    <string name="select_living_status">Select Living Status</string>
    <string name="LivingStatusQuestion">Which of the following describes your living status?</string>
    <string name="homeowner">Homeowner</string>
    <string name="lessee">Lessee</string>
    <string name="renter">Renter</string>
    <string name="profile">Profile</string>
</resources>