<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".EducationActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_education_level"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/educationQuestion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <RadioGroup
        android:id="@+id/radioGroupEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/radioButtonBelowHS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/below_high_school" />

        <RadioButton
            android:id="@+id/radioButtonHS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_school"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonBS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bachelor_s_degree" />

        <RadioButton
            android:id="@+id/radioButtonMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_s_degree" />

        <RadioButton
            android:id="@+id/radioButtonPhD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ph_d_or_higher" />

        <RadioButton
            android:id="@+id/radioButtonTradeSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trade_school" />

        <RadioButton
            android:id="@+id/radioButtonPreferNot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prefer_not_to_say" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCancelEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/space2"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space2" />

    <Button
        android:id="@+id/btnSubmitEducation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@+id/space2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="@+id/space2" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>