<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DemographicInfoActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demographic_info"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEducation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewEducation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marital_status"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMaritalStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewMaritalStatus" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/living_status"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLivingStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLivingStatus" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        app:layout_constraintBottom_toBottomOf="@+id/textViewIncome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewIncome" />

    <TextView
        android:id="@+id/textViewEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectEducation"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/btnSelectEducation" />

    <TextView
        android:id="@+id/textViewMaritalStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectMaritalStatus"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/btnSelectMaritalStatus" />

    <TextView
        android:id="@+id/textViewLivingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectLivingStatus"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/btnSelectLivingStatus" />

    <TextView
        android:id="@+id/textViewIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/n_a"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectIncome"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/btnSelectIncome" />

    <Button
        android:id="@+id/btnSelectEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnSelectMaritalStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="@+id/btnSelectEducation"
        app:layout_constraintStart_toStartOf="@+id/btnSelectEducation"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectEducation" />

    <Button
        android:id="@+id/btnSelectLivingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="@+id/btnSelectMaritalStatus"
        app:layout_constraintStart_toStartOf="@+id/btnSelectMaritalStatus"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectMaritalStatus" />

    <Button
        android:id="@+id/btnSelectIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="@+id/btnSelectLivingStatus"
        app:layout_constraintStart_toStartOf="@+id/btnSelectLivingStatus"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectLivingStatus" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>